changed form groups to new grid system, fixed button appearance, and alignment of some elements

--- a/app/javascript/psulib_blacklight/styles/_theme.scss
+++ b/app/javascript/psulib_blacklight/styles/_theme.scss
@@ -13,12 +13,6 @@ $nearly-black: #0a0f15;
 $headings-font-family: "Roboto Slab", Georgia, sans-serif;
 $font-family-sans-serif: "Open Sans", Arial, serif;
 
-//  Color overrides
-$theme-colors: (
-        "dark": $psu-dark-blue,
-        "light": #f2f2f2,
-);
-
 //  Navbar
 $navbar-brand-padding-y: 0;
 
