--- a/app/javascript/psulib_blacklight/styles/_twitter_bootstrap_overrides.scss
+++ b/app/javascript/psulib_blacklight/styles/_twitter_bootstrap_overrides.scss
@@ -1,3 +1,13 @@
 .navbar {
   display: block;
 }
+
+.container {
+    max-width: 1140px;
+}
+
+a {
+  background-color: transparent;
+  color: #0071bc;
+  text-decoration: none;
+}
